# public-gpt2-train

./: .gitignore  LICENSE  README.md  inference.py  pyproject.toml  train.py
configs/: config.yaml
configs/experiment/: default.yaml
configs/model/: bigger_default.yaml  default.yaml  test.yaml
models/: gpt2.py
src/data/: data_loader.py
src/training/: trainer.py
src/utils/: utils.py
